GS-13424 add Java9 args via OutputVMOptions if Java version == 9
(cherry picked from commit aaed337)